tests/errors/stack_missing_use.ptt
// Compile-fail: using Stack of T without `use std/stack`
// must error. Proves no hidden auto-import.

spark {
  s is Stack of int()
  s.push(1)
}
